--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,41 +1,65 @@
+/* hoja de estilos de tabla */
+
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+
+:root{
+	--primario: #2A2F4F;
+	--secundario: #917FB3;
+	--terciario: #E5BEEC;
+	--claro: #FDE2F3;
+}
 
 *{margin: 0; padding:0; box-sizing: border-box;}
 html{ height: 100%; line-height: 1.5; font-size: 62.5%; /* =10px */ font-family:  Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;}
 
 h1{
-    background: #9444fc;
-    border: 1.5px solid #000000;
-	border-radius: .4rem;
+	padding: 1.5rem;
 	text-align: center;
-	color: #333;
-	display: block;
-	width: 100%; 
-	height: 100%;
-	padding: 1.5rem 0;
-	text-decoration: none; 
-}
-body{
-	background: #dec5ff; /* Old browsers */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#EAEAEA', endColorstr='#222',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	font-size: 12px;
-	font-size: 1.2rem;
+	color: var(--claro);
+	background-color: var(--secundario);
+	border-radius: 2rem;
+	
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
 	
 }
-#f-block,
+body{
+	background-color: #7F669D;	
+	font-size: 1.6rem;
+	line-height: 1.5;
+
+	
+}
+
+h2{
+	font-size: 1.5rem;
+}
+
+p{
+	font-size: .5;
+}
+
+
+#periodic-table{
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+}
+
+
 #periodic-table{
   display: block;
   width: 100%;
+  background-color: var(--secundario);
+  padding: 2rem;
 }
 #f-block:after ,
 #periodic-table:after {
   content: "";
   display: table;
   clear: both;
+  
 }
 #descriptions {
 	width: 70%;
@@ -51,6 +75,7 @@ body{
 	-moz-transition: opacity 2s ease-out;
 	-webkit-transition: opacity 2s ease-out;
 	-o-transition: opacity 2s ease-out;
+	
 }
 #descriptions .info:target{
     opacity: 1; 
@@ -81,18 +106,20 @@ body{
 #f-block span{
 	float: right;
 }
+.elemento:hover{
+	background-color: var(--primario);
+}
 .element{
-	padding: 2px;
-	width: 50%;
-	height: 5%;
+	width: auto;
 }
 .row span{ 
 	display: block;
 }
-@media only screen and (min-width : 768px) {
+
+@media(min-width: 768px){
 	.element{
 		width: 5.55%; 
-		height: 5.5rem;
+		height: 7.5rem;
 	}
 	#f-block{
 		margin-top: 30px;
@@ -112,7 +139,6 @@ body{
 }
 .element a{
     border: 1.5px solid #000000;
-	border-radius: .4rem;
 	color: #ffffff;
 	display: block;
 	width: 100%; 
@@ -133,56 +159,101 @@ body{
 	font-size: 0.7em;
 }
 
-.element a:hover{
-    color: #000000;
-
+.element{
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
 }
+
 .key{
+	font-weight: 550;
+	background-color: var(--terciario);
 	line-height: 3rem;
 	margin: 2rem auto;
 	width: 60%;
-	padding: 0;
+	padding: 1.5rem;
 	list-style-type: none;
 	text-align: center;
+
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
 }
 .key li { 
 	display: inline-block; 
 	margin: 0 .2rem;
 }
 .swatch{ 
-	width: 1rem;
-	height: 1rem;
+	width: 1.5rem;
+	height: 1.5rem;
 	border: solid 1px #777;
 	display: inline-block;
 }
 
 .swatch.ipn,
 .element.ipn a{
-	background: #621c3f;
+	background-color: #621c3f;
+	transition: background-color 2s ease;
+    transition: font-size 1s ease;
+}
+
+.element.ipn a:hover{
+	font-size:1.7rem;
+	background-color: var(--terciario);
+	color: var(--primario);
+	font-weight: 700;
 }
 
 .swatch.mexico,
 .element.mexico a{
-	background: #11531c;
+	background-color: #11531c;
+	transition: background-color 2s ease;
+    transition: font-size 1s ease;
 }
+
+.element.mexico a:hover{
+	
+	font-size:1.7rem;
+	background-color: var(--terciario);
+	color: var(--primario);
+	font-weight: 700;
+
+}
+
 .swatch.lat,
 .element.lat a{
 	background: #73691d;
+	transition: background-color 2s ease;
+    transition: font-size 1s ease;
+}
+
+.element.lat a:hover{
+	
+	font-size:1.7rem;
+	background-color: var(--terciario);
+	color: var(--primario);
+	font-weight: 700;
 }
 
 .swatch.world,
 .element.world a{
 	background: #050070;
+	transition: background-color 2s ease;
+    transition: font-size 1s ease;
+}
+
+.element.world a:hover{
+	
+	font-size: 1.7rem;
+	background-color: var(--terciario);
+	color: var(--primario);
+	font-weight: 700;
 }
 
 .links{
 	margin-left: 2rem;
 }
-h1{
-	text-align: center;
-	font-size: 4rem;
-	color: #FFF;
-}
+
 .by{
 	text-align: center;
 	font-size: 1.8rem;
@@ -216,14 +287,22 @@ th{
 }
 
 #vamos{
-	width: 10%;
-	background-color: #eee;
-	padding: .8rem;
+	font-weight: 700;
+	width: 100%;
+	background-color: var(--terciario);
+	padding: 1rem;
 	border-radius: 3px;
+	border: none;
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.79);
 }
 
 #vamos:hover{
-	background-color: #33A7D8;
+	
+	background-color: var(--primario);
+	color: var(--claro);
+	cursor: pointer;
 }
 
 #vamos>a{
@@ -235,6 +314,7 @@ th{
     width: 100px;
     height: 50px;
 }
+
 .info h2{
 	text-align: center;
 	font-size: 2.6em;
@@ -247,8 +327,8 @@ th{
 
 .info img
 {
+	align-items: center;
 	width: 170px; height: 200px;
-	border: 1.5px solid #000000;
 	border-radius: .4rem;
 	margin-left: 70%;
 	margin-top: -20%;
